3.0 (Unreleased)
* Make IRB itself a dependency (default gem)
* Move: "Every day… IRB" into its own git repository
  * https://github.com/janlelis/every_day_irb
* Version bump code, clipboard, and methodfinder

2.2.2
* Remove Rails WIRB loading hack (no longer necessary)

2.2.1
* Allow os gem to be below 1.0
* Do not use binding.repl gem if Ruby version is at least 2.5

2.2.0
* Remove info, version, engine, and os methods. Use RubyInfo, RubyVersion, RubyEngine, and OS instead (fixes #40)

2.1.0
* Improve Rails compatibility
  * Do not load instance gem in the context of Rails
  * Make sure to actually require "irb" before using it
  * Use terrible hack to load Wirb in context of Rails
* Relax paint dependency (allows usage of paint >= 2.0)
* Require new versions of fancy_irb, clipboard, os
* Set abort_on_exception to true for late threads (early threads do this implicitly via join)

2.0.1
* Remove g gem

2.0.0
* Use Wirb 2.0 and FancyIrb 1.0
* Drop support for Ruby 1
* Simplify starting from code via: require 'irbtools/binding'
* Rename method to show a method's source to: code
* Add instance gem
* Remove code organization gems (boson + alias)
* Don't add '.' to the load path, use rr (require_relative) instead
* Improve loading order of libraries
* Remove aliases for Irbtools configuration
* Integrate irbtools-more into irbtools main repo
* EveryDayIrb now gets released on its own, instead with every new irbtools version
* Improve documentation in Readme

1.7.1
* bump binding.repl, hirb, methodfinder

1.7.0
* bump boson, boson-more, binding.repl
* required ruby version: 1.9.3
* remove awesome_print

1.6.1
* don't load debugging/repl by default
* rename re method to engine and rv to version

1.6.0
* remove zucker dependency, but add debugging, ruby_version, ruby_engine, ruby_info and os gem
* configure binding.repl to load irb, not pry
* bump binding.repl, paint, wirb

1.5.1
* include binding.repl gem
* bump coderay, awesome_print, method_source, wirb

1.5.0